<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="200dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/transparentWhiteShade"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    tools:layout_editor_absoluteX="5dp"
    tools:layout_editor_absoluteY="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/review_profile"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/iv_popcorn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/review_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:padding="4dp"
            android:text="@string/review_user_name"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/review_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/review_profile"
            app:layout_constraintTop_toTopOf="@+id/review_profile" />

        <TextView
            android:id="@+id/review_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="4"
            android:maxLines="5"
            android:padding="2dp"
            android:text="@string/review_content"
            android:textAlignment="viewStart"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/dividerView"
            app:layout_constraintEnd_toEndOf="@+id/review_name"
            app:layout_constraintStart_toStartOf="@+id/review_profile"
            app:layout_constraintTop_toBottomOf="@+id/review_name" />

        <View
            android:id="@+id/dividerView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/lightGray"
            app:layout_constraintBottom_toTopOf="@+id/view_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/view_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:text="@string/movie_review_view_more"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_details" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>

