<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_iv_description"
            android:scaleType="centerCrop"
            android:src="@drawable/i4" />

        <View
            android:id="@+id/moviePosterBg"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/gridItemBg" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="RtlHardcoded">

            <View
                android:id="@+id/movieTitleBg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@color/blackTransparent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">


                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/movieTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:gravity="bottom"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:paddingStart="12dp"
                            android:paddingTop="8dp"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            android:singleLine="true"
                            android:text="@string/movie_title"
                            android:textColor="@android:color/white"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/movieYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="false"
                            android:layout_alignParentStart="false"
                            android:layout_alignStart="@+id/movieTitle"
                            android:layout_below="@+id/movieTitle"
                            android:paddingBottom="2dp"
                            android:paddingStart="12dp"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="10"
                            android:text="@string/movie_year"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            tools:ignore="RtlSymmetry" />
                    </RelativeLayout>
                </FrameLayout>

            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
